# scoala-info

./: .gitignore  README.md
exercitii/10-a/: nr echi aplicatie.cpp
exercitii/10-a/siruri_de_caractere/: concatenare_sir_vector.cpp
exercitii/9-a/cate nr + - si 0 citite au fost/: cate nr + - si 0.cpp
exercitii/9-a/cate_nr/: cate_nr.cpp
exercitii/9-a/fizzbuzz/: fizzbuzz.cpp
exercitii/9-a/ghici_numarul/: main.cpp
exercitii/9-a/inversul unui nr/: inv_de_la_inceput.cpp  inversul_unui_nr.cpp
exercitii/9-a/minul_negativ/: min_neg.cpp
exercitii/9-a/nr perfecte/: nr perfecte.cpp
exercitii/9-a/nr_max/: nr_max.cpp
extra/Qt/HelloUser/: CMakeLists.txt  (+2 more)
extra/clase/: clase  clase.cpp
extra/header/: CMakeLists.txt  main.cpp
extra/header/include/: main.h
extra/operator_overloading/: main  main.cpp
extra/random_number_generator(s)/: rand().cpp  srand().cpp
extra/siruri_de_caractere/: modern.cpp
extra/vectori/: vectori_modern.cpp
teorie/cmath/: cmath.cpp
teorie/cmmmc/: cmmmc.cpp
teorie/codul_ascii_al_unui_character/: codul_ascii.cpp
teorie/conversia_baza_numere/: conversie_b10-bQ  conversie_b10-bQ.cpp  conversie_bQ-b10  conversie_bQ-b10.cpp
teorie/fisiere_txt/: fisiereIO.cpp
teorie/lectii integrale/: Tablouri_bidimensionale.docx  matici_patratice.docx
teorie/mod_si_div/: main.cpp
teorie/nr_prime/: nr_prime.cpp
teorie/random_number_generator(s)/: true_srand().cpp
teorie/scurtaturi/: shortcuts.cpp
teorie/siruri/: modern.cpp  siruri.cpp
teorie/subprograme/: subprograme.cpp
teorie/switch/: switch.cpp
teorie/variabile/: variabile.cpp
(+198 files in other folders)
